--- a/src/app/(beforeLogin)/_component/main.module.css
+++ b/src/app/(beforeLogin)/_component/main.module.css
@@ -1,24 +1,23 @@
 .container {
   display: flex;
   flex-direction: row;
-  /* background-color: #fff; */
+  background-color: rgb(var(--background-end-rgb));
   width: 100dvw;
   height: 100dvh;
 }
-
 .left {
   flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
 .right {
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
+
 .right h1 {
   font-weight: bold;
   font-size: 64px;
@@ -35,7 +34,26 @@
   margin-bottom: 20px;
   margin-top: 40px;
 }
-
+@media all and (min-width: 1000px) {
+  .container {
+    flex-direction: row;
+    padding: 0;
+  }
+  .left {
+    flex: 1;
+    justify-content: center;
+  }
+  .left img {
+    width: 450px;
+    height: 550px;
+  }
+  .right {
+    justify-content: center;
+  }
+  .right h1 {
+    font-size: 64px;
+  }
+}
 .signup {
   width: 300px;
   height: 40px;
@@ -66,30 +84,4 @@
 }
 .login:hover {
   background-color: rgba(29, 155, 240, 0.1);
-}
-@media all and (min-width: 1000px) {
-  .container {
-    flex-direction: row;
-    padding: 0;
-  }
-  .left {
-    flex: 1;
-    justify-content: center;
-  }
-  .left img {
-    width: 450px;
-    height: 550px;
-  }
-  .right {
-    justify-content: center;
-  }
-  .right h1 {
-    font-size: 64px;
-  }
-}
-
-@media all and (max-width: 500px) {
-  .container {
-    flex-direction: column;
-  }
 }
