feat: 로고 수정 및 스타일 일부분 수정

--- a/src/app/(beforeLogin)/_component/main.module.css
+++ b/src/app/(beforeLogin)/_component/main.module.css
@@ -34,6 +34,26 @@
   margin-bottom: 20px;
   margin-top: 40px;
 }
+
+@media all and (max-width: 1000px) {
+  .container {
+    flex-direction: column;
+    padding: 24px 12px;
+  }
+  .left {
+    flex: 0;
+    justify-content: flex-start;
+  }
+  .left img {
+    width: 70px;
+    height: 70px;
+  }
+  .right {
+    flex: none;
+    justify-content: center;
+  }
+}
+
 @media all and (min-width: 1000px) {
   .container {
     flex-direction: row;
