--- a/src/app/(beforeLogin)/_component/signup.module.css
+++ b/src/app/(beforeLogin)/_component/signup.module.css
@@ -105,8 +105,9 @@
 .actionButton:disabled {
   opacity: 0.5;
 }
-.actionButton:hover {
-  background-color: rgb(39, 44, 48);
+.actionButton:disabled:hover {
+  background-color: rgb(15, 20, 25);
+  cursor: not-allowed;
 }
 
 .closeButton {
