--- a/src/app/(afterLogin)/[username]/profile.module.css
+++ b/src/app/(afterLogin)/[username]/profile.module.css
@@ -14,6 +14,13 @@
   display: flex;
   height: 53px;
   align-items: center;
+
+  position: sticky;
+  top: 0;
+  z-index: 30;
+
+  background-color: rgba(255, 255, 255, 0.85);
+  backdrop-filter: blur(12px);
 }
 
 .headerTitle {
