--- a/src/app/(beforeLogin)/_component/signup.module.css
+++ b/src/app/(beforeLogin)/_component/signup.module.css
@@ -127,6 +127,14 @@
 .closeButton:hover {
   background-color: rgba(15, 20, 25, 0.1);
 }
+
+.error {
+  font-weight: bold;
+  color: red;
+  margin-top: 10px;
+  text-align: center;
+}
+
 @media all and (min-width: 687px) {
   .closeButton {
     left: 16px;
