feat: 로그인&로그아웃 여부에 따라 컴포넌트 렌더링 변경

--- a/src/app/(afterLogin)/layout.module.css
+++ b/src/app/(afterLogin)/layout.module.css
@@ -17,6 +17,11 @@
   height: 100dvh;
 }
 
+.noLogin {
+  width: 72px;
+  height: 100dvh;
+}
+
 .leftSectionFixed {
   position: fixed;
   width: inherit; /* 부모 요소(leftSection)의 너비 275px를 상속 */
