feat: 로그인, 로그아웃 실제로 하기 (try문안에서의 throw랑 try문 없을때의 throw는 다른 값을 뱉어냄)
이슈: try문안에서의 throw랑 try문 없을때의 throw는 다른 에러코드를 뱉어내는 걸 알았다.

--- a/src/app/(beforeLogin)/_component/login.module.css
+++ b/src/app/(beforeLogin)/_component/login.module.css
@@ -108,6 +108,7 @@
 }
 .actionButton:disabled {
   opacity: 0.5;
+  cursor: not-allowed;
 }
 .actionButton:hover {
   background-color: rgb(39, 44, 48);
@@ -130,11 +131,18 @@
 .closeButton:hover {
   background-color: rgba(15, 20, 25, 0.1);
 }
-/* @media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
   .closeButton {
     background-color: black;
   }
   .closeButton svg {
     fill: white;
   }
-} */
+}
+
+.message {
+  color: red;
+  display: flex;
+  justify-content: center;
+  font-weight: bold;
+}
